--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <h1>產品清單</h1>
         <!-- Banner 區塊，連結至新增產品頁面 -->
         <div style="background-color: #f2f2f2; padding: 20px; text-align: center;">
-            <a href="/Product/Create" style="font-size: 20px; text-decoration: none; color: #007ACC;">新增產品</a>
+            <a href="/Products/Create" style="font-size: 20px; text-decoration: none; color: #007ACC;">新增產品</a>
         </div>
     </header>
     <section>
