--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,24 +1,53 @@
 @model IEnumerable<Product>
 
-<h2>產品列表</h2>
-<a asp-action="Create">新增產品</a>
+@{
+    ViewData["Title"] = "Index";
+}
 
-<table>
-    <tr>
-        <th>產品名稱</th>
-        <th>價格</th>
-        <th>動作</th>
-    </tr>
-    @foreach (var item in Model)
-    {
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
         <tr>
-            <td>@item.Name</td>
-            <td>@item.Price</td>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">編輯</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">詳情</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">刪除</a>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-    }
+}
+    </tbody>
 </table>
