--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,24 +1,39 @@
 ﻿@model IEnumerable<MyMvcApp.Models.Product>
 
-<div class="text-center">
+<div style="text-align: center;">
     <h1 class="display-4">Welcome tbody MyMvcApp 12130906</h1>
     <h4>這些資料是從 Postgres Database 資料庫來的</h4>
 
-    <table border="1" cellspacing="0" cellpadding="5" style="margin: 0 auto; text-align: center;">
+    <table class="table">
         <thead>
             <tr>
-                <th>產品名稱</th>
-                <th>描述</th>
-                <th>價格</th>
+
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Price)
+                </th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var product in Model)
+            @foreach (var item in Model)
             {
                 <tr>
-                    <td>@product.Name</td>
-                    <td>@product.Description</td>
-                    <td>@product.Price</td>
+
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Price)
+                    </td>
                 </tr>
             }
         </tbody>
